# inwm

./: .gitignore  CMakeLists.txt  Makefile  README.md  WindowManager.cpp  WindowManager.hpp  inwm  main.cpp  new_bar.cpp  run.sh  test.sh  test_desktop.sh  xinitrc
bar/: Bar.cpp  Bar.hpp  main.cpp
lib/: Application.cpp  Application.hpp  Button.cpp  Button.hpp  Dropdown.cpp  Dropdown.hpp  GUI.cpp  GUI.hpp  Makefile  README.md  Widgets.hpp  Window.cpp  Window.hpp  example_settings.cpp  test_gui.cpp
